changed app-root height and width to 100% instead of 100vw and 100vh to avoid overflow on x axis.

--- a/src/app/pages/landing/landing.component.scss
+++ b/src/app/pages/landing/landing.component.scss
@@ -2,9 +2,11 @@
     display: flex;    
     flex-direction: column;
     height: 100%;
+    padding-bottom: 9rem; 
+    width: 100%;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1072%26quot%3b)' fill='none'%3e%3cpath d='M 0%2c550 C 57.6%2c475.8 172.8%2c206.8 288%2c179 C 403.2%2c151.2 460.8%2c440 576%2c411 C 691.2%2c382 748.8%2c20.2 864%2c34 C 979.2%2c47.8 1036.8%2c485.8 1152%2c480 C 1267.2%2c474.2 1382.4%2c100 1440%2c5L1440 560L0 560z' fill='rgba(45%2c 212%2c 191%2c 1)'%3e%3c/path%3e%3cpath d='M 0%2c130 C 96%2c187.4 288%2c420.2 480%2c417 C 672%2c413.8 768%2c136.2 960%2c114 C 1152%2c91.8 1344%2c267.6 1440%2c306L1440 560L0 560z' fill='rgba(20%2c 184%2c 166%2c 1)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1072'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
     background-repeat: no-repeat;
     // background-size: cover;
     background-position: center bottom;
-    background-size: contain;
+    background-size: cover;
 }
