--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,6 +1,7 @@
 :host {
     display: flex;
     align-items: center;
+    width: 100%;
     justify-content: space-between;
     padding: 1.5rem 9.25rem;
 }
